# serializer version: 1
# name: test_postgres_array_filters[session-tracked-containedIn-async-asyncpg_engine]
  '''
  SELECT array_model.array_str_col,
         array_model.id
    FROM array_model AS array_model
   WHERE array_model.array_str_col <@ $1::TEXT[]
  '''
# ---
# name: test_postgres_array_filters[session-tracked-containedIn-async-psycopg_async_engine]
  '''
  SELECT array_model.array_str_col,
         array_model.id
    FROM array_model AS array_model
   WHERE array_model.array_str_col <@ %(param_1)s::TEXT[]
  '''
# ---
# name: test_postgres_array_filters[session-tracked-containedIn-sync-psycopg_engine]
  '''
  SELECT array_model.array_str_col,
         array_model.id
    FROM array_model AS array_model
   WHERE array_model.array_str_col <@ %(param_1)s::TEXT[]
  '''
# ---
# name: test_postgres_array_filters[session-tracked-contains-async-asyncpg_engine]
  '''
  SELECT array_model.array_str_col,
         array_model.id
    FROM array_model AS array_model
   WHERE array_model.array_str_col @> $1::TEXT[]
  '''
# ---
# name: test_postgres_array_filters[session-tracked-contains-async-psycopg_async_engine]
  '''
  SELECT array_model.array_str_col,
         array_model.id
    FROM array_model AS array_model
   WHERE array_model.array_str_col @> %(param_1)s::TEXT[]
  '''
# ---
# name: test_postgres_array_filters[session-tracked-contains-sync-psycopg_engine]
  '''
  SELECT array_model.array_str_col,
         array_model.id
    FROM array_model AS array_model
   WHERE array_model.array_str_col @> %(param_1)s::TEXT[]
  '''
# ---
# name: test_postgres_array_filters[session-tracked-overlap-async-asyncpg_engine]
  '''
  SELECT array_model.array_str_col,
         array_model.id
    FROM array_model AS array_model
   WHERE array_model.array_str_col && $1::TEXT[]
  '''
# ---
# name: test_postgres_array_filters[session-tracked-overlap-async-psycopg_async_engine]
  '''
  SELECT array_model.array_str_col,
         array_model.id
    FROM array_model AS array_model
   WHERE array_model.array_str_col && %(param_1)s::TEXT[]
  '''
# ---
# name: test_postgres_array_filters[session-tracked-overlap-sync-psycopg_engine]
  '''
  SELECT array_model.array_str_col,
         array_model.id
    FROM array_model AS array_model
   WHERE array_model.array_str_col && %(param_1)s::TEXT[]
  '''
# ---
